--- a/src/assets/style/common.scss
+++ b/src/assets/style/common.scss
@@ -15,17 +15,20 @@ body {
 }
 
 .tab {
+    margin: 0;
+    padding: 0;
     display: flex;
     justify-content: space-around;
     align-items: center;
     text-align: center;
     color: $subTitleFontColor;
     background-color: #fff;
-    padding: 10px 0;
-    margin: 0;
+    border-bottom: 1px solid $otherTextFontColor;
     .item {
         list-style: none;
         a {
+            display: inline-block;
+            padding: 10px;
             color: inherit;
             text-decoration: none;
         }
