--- a/src/assets/style/common.scss
+++ b/src/assets/style/common.scss
@@ -10,8 +10,18 @@ body {
     font-size: 14px;
 }
 
-.list li {
-    display: flex;
+.container {
+    padding: 10px 0;
+}
+
+.list-title {
+    color: $titleFontColor;
+    font-size: 16px;
+    border-left: 2px solid $mainColor;
+    padding-left: 10px;
+    .iconfont {
+        padding-left: 10px;
+    }
 }
 
 .tab {
